# equity-filing-delta

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: _panel.py  ask.py  narrate.py
api/data/: events.json
docs/: index.html  panel_index.json
docs/classified/: A.json  AAPL.json  ABBV.json  ABNB.json  ABT.json  ACGL.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AFL.json  AIZ.json  AJG.json  AKAM.json  ALB.json  ALGN.json  ALL.json  ALLE.json  AMAT.json  AMCR.json  AMD.json  AME.json  AMGN.json  AMP.json  AMT.json  AMZN.json  ANET.json  AON.json  AOS.json  APA.json  APD.json  APH.json  APO.json  APP.json  APTV.json  (+434 more)
scripts/: build_embed_features.py  build_panel.py  build_passages.py  build_web_panel.py  bundle_events.py  classify_batch.py  classify_panel.py  classify_sample.py  demo_diff.py  fetch_lm_dictionary.py  ingest_universe.py  narrate_event.py  run_study.py  run_study_embed.py  run_study_llm.py  smoke_ingest.py  verify_acceptance_tz.py
src/eqd/: __init__.py  config.py  eventtime.py  universe.py
src/eqd/delta/: __init__.py  diff.py  embed.py  panel.py  risk_factors.py  tone.py
src/eqd/ingest/: __init__.py  edgar.py  prices.py  sections.py
src/eqd/narrate/: __init__.py  memo.py
src/eqd/study/: __init__.py  abnormal.py  car.py  costs.py  crosssection.py  portfolio.py  residualize.py
tests/: test_abnormal.py  test_ask_api.py  test_diff.py  test_embed.py  test_eventtime.py  test_memo.py  test_narrate_api.py  test_portfolio.py  test_residualize.py  test_risk_factors.py  test_tone.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  data.ts  hooks.ts  index.css  lib.ts
web/src/components/: Charts.tsx  FilingQA.tsx  Narrator.tsx  Static.tsx  ui.tsx
