[project]
name = "equity-filing-delta"
version = "0.1.0"
description = "Point-in-time event-study harness for year-over-year SEC filing deltas (equities)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pandas-market-calendars>=4.4",
    "python-dotenv>=1.0",
    # added in later steps:
    # "httpx", "edgartools", "rapidfuzz", "duckdb", "polars",
    # "statsmodels", "scipy", "anthropic",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eqd"]
