[project]
name = "equity-filing-delta"
version = "0.1.0"
description = "Point-in-time event-study harness for year-over-year SEC filing deltas (equities)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pandas-market-calendars>=4.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",            # EDGAR REST access
    "lxml>=5.0",             # HTML/XBRL parsing + section extraction
    "rapidfuzz>=3.9",        # C-accelerated diff reconciliation
    "yfinance>=0.2",         # daily adjusted prices (Stooq is JS-gated)
    "statsmodels>=0.14",     # market model + cross-sectional inference
    "openai>=1.30",          # grounded narrator via GLM 5.2 (NVIDIA OpenAI-compatible endpoint)
    "anthropic>=0.40",       # diff-grounded LLM risk-factor classifier (structured outputs)
    "fastembed>=0.3",        # local CPU embeddings (bge-small) for the embedding-change signal
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eqd"]
